# os_lab_09_team

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  cmake_install.cmake  imgui.ini
.cache/clangd/index/: Application.cpp.3CCA81582340EE93.idx  Application.cpp.84BFC634EE912620.idx  Application.cpp.BBCE577113A82E4D.idx  Application.h.4CC7F43D84CBB354.idx  Application.h.5AE7448370AF7E24.idx  Application.h.A3E3A06BA587CF54.idx  Application.h.F9AE56E28CEE15E5.idx  BackgroundMonitor.cpp.1DBEA86EF9AF9607.idx  BackgroundMonitor.h.A3EAC37C2ED92AF7.idx  DialogManager.cpp.0B737033A5FE8B16.idx  DialogManager.h.171E969AAC74CC83.idx  GuiRenderer.cpp.3641FC4FA1DDB9ED.idx  GuiRenderer.cpp.BE8CB18AC2F3D9D0.idx  GuiRenderer.h.43C040510202081F.idx  GuiRenderer.h.C71CECE50CF3CB1F.idx  MainWindow.cpp.ED3F54DD4F34770E.idx  MainWindow.h.C02CFD59DAF6A9B7.idx  PerformanceResults.h.7E3F0193435DA475.idx  PerformanceTester.cpp.AE6A378D901AA93D.idx  PerformanceTester.h.C9CEB8A0E3F2AED4.idx  PipeCore.cpp.AF57014E11150108.idx  PipeCore.h.66B3D8DE9A532BEF.idx  ProcessLib.cpp.CDC458377E588D1F.idx  ProcessLib.h.5E90668C77F02563.idx  ProcessLibDynamic.cpp.A96F3F6D8F888C17.idx  ProcessLibDynamic.h.2E55A6ACB97C71CE.idx  ProcessLibRundll.cpp.C6F4A7CDD08C0C8F.idx  ProcessManager.cpp.E6C88734C3804E11.idx  ProcessManager.cpp.EA94B5374ECD7838.idx  ProcessManager.h.B62C457857DE56F7.idx  ProcessManager.h.C620E0882D0B1CB8.idx  Protocol.h.77C1DBE7A258F8EC.idx  ResultTypes.h.BA03C883B94C4C8C.idx  SharedMemoryCore.cpp.28E66A36E4418B7F.idx  SharedMemoryCore.cpp.AE6A3A4E66A8A83B.idx  SharedMemoryCore.h.1EB80DEE844F8695.idx  SharedMemoryCore.h.B305D76F88F008F3.idx  Timer.cpp.2521C1DDD78CFBB2.idx  Timer.cpp.B4BED446157B537C.idx  Timer.cpp.BB00D95595C15989.idx  (+70 more)
core/: Application.cpp  Application.h  CMakeLists.txt  PipeCore.cpp  PipeCore.h  Protocol.h  SharedMemoryCore.cpp  SharedMemoryCore.h
ipc/: CMakeLists.txt  IIpcCore.h  ProcessManager.cpp  ProcessManager.h  VirtualBoard.cpp  VirtualBoard.h
ipc/pipe/: PipeCore.cpp  PipeCore.h
ipc/protocol/: Protocol.h
ipc/sharedmemory/: SharedMemoryCore.cpp  SharedMemoryCore.h
main/: main.cpp
managers/: GuiRenderer.cpp  GuiRenderer.h  WindowManager.cpp  WindowManager.h
window/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  workerwindow.cpp  workerwindow.h  workerwindow.ui
